updated configure and build on OSX to look for the simias_client_c libraries in the right place
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3640 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -476,6 +476,13 @@ case $IFOLDER_OS in
         AC_SUBST(ATK_CFLAGS)
         AC_SUBST(ATK_LIBS)
     ;;
+    darwin)
+        PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= 1.0)
+        SIMIAS_CLIENT_C_INCLUDES=`pkg-config --variable=includedir simias-client-c`
+        SIMIAS_CLIENT_C_LIBS=`pkg-config --variable=libdir simias-client-c`
+        AC_SUBST(SIMIAS_CLIENT_C_INCLUDES)
+        AC_SUBST(SIMIAS_CLIENT_C_LIBS)
+    ;;
 esac
 
 #
