updated the include path to include simias
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3641 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias-client-c.pc.in
+++ b/simias-client-c.pc.in
@@ -8,7 +8,7 @@ Conflicts: @PKG_CONFIG_CONFLICTS@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@prefix@/include
+includedir=@prefix@/include/simias
 
 Libs:-Wl,-rpath,${libdir} -L${libdir} -lsimias -lsimias-event @PC_FILE_LIB_SIMIAS_GAIM@
 Cflags: -I${includedir}
