added two more source files (channel.cs and location.cs) to the build
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3644 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/mDnsDomain/Makefile.am
+++ b/simias/src/mDnsDomain/Makefile.am
@@ -1,7 +1,7 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH)
 
-mDnsDomain_CSFILES1 = $(srcdir)/Service.cs $(srcdir)/Domain.cs $(srcdir)/User.cs 
+mDnsDomain_CSFILES1 = $(srcdir)/Service.cs $(srcdir)/Domain.cs $(srcdir)/User.cs $(srcdir)/Channel.cs $(srcdir)/Location.cs 
 mDnsDomain_CSFILES := $(subst /,$(SEP),$(mDnsDomain_CSFILES1))
 mDnsDomain_INCLUDES =
 mDnsDomain_RESOURCES =
