Modified src/Makefile.am so that DIST_SUBDIRS is NOT something that's determined dynamically.  "make dist" should include all the code regardless of what's being built.  SUBDIRS is now the only thing that's determined on the fly during a build.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3647 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Makefile.am
+++ b/simias/src/Makefile.am
@@ -1,19 +1,22 @@
+DIST_SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias GaimDomain
+
+if BUILD_GAIM_DOMAIN
+GAIM_DOMAIN_DIR = GaimDomain
+endif
+
 if DARWIN
 SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias
 
-DIST_SUBDIRS = $(SUBDIRS)
 endif
 
 if LINUX
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias $(GAIM_DOMAIN_DIR)
 
-DIST_SUBDIRS = $(SUBDIRS)
 endif
 
 if WINDOWS
 SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService AddressBook WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain
 
-DIST_SUBDIRS = $(SUBDIRS) libsimias
 endif
 
 EXTRA_DIST = ifdata simias-snakeoil.keys SqliteProvider
