Moved the .h files from being a pkginclude to installing manually so that "make package" will work.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3659 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/libifolder/Makefile.am
+++ b/ifolder/src/libifolder/Makefile.am
@@ -16,9 +16,6 @@ override CFLAGS =
 libifolderclient_la_SOURCES = \
  	envC.c iFolderClientLib.c stdsoap2.c ifolder.c
 
-pkginclude_HEADERS = \
-	iFolderStub.h iFolder.nsmap stdsoap2.h iFolderH.h ifolder.h
-
 libifolderclient_la_CFLAGS = \
 	-DWITH_NONAMESPACES
 
@@ -35,6 +32,21 @@ $(srcdir)/iFolderClient.h: $(srcdir)/stdsoap2.c $(IFOLDER_CLIENT_WSDL)
 
 $(srcdir)/iFolderClientLib.c: $(srcdir)/iFolderClient.h
 	$(GSOAP_PATH)/soapcpp2 -c -n -piFolder $(srcdir)/iFolderClient.h
+
+install-exec-local:
+	$(mkinstalldirs) $(DESTDIR)$(includedir)
+	$(INSTALL_PROGRAM) iFolderStub.h $(DESTDIR)$(includedir)/ifolder
+	$(INSTALL_PROGRAM) iFolder.nsmap $(DESTDIR)$(includedir)/ifolder
+	$(INSTALL_PROGRAM) stdsoap2.h $(DESTDIR)$(includedir)/ifolder
+	$(INSTALL_PROGRAM) iFolderH.h $(DESTDIR)$(includedir)/ifolder
+	$(INSTALL_PROGRAM) ifolder.h $(DESTDIR)$(includedir)/ifolder
+
+uninstall-local:
+	rm -f $(DESTDIR)$(includedir)/ifolder/iFolderStub.h
+	rm -f $(DESTDIR)$(includedir)/ifolder/iFolder.nsmap
+	rm -f $(DESTDIR)$(includedir)/ifolder/stdsoap2.h
+	rm -f $(DESTDIR)$(includedir)/ifolder/iFolderH.h
+	rm -f $(DESTDIR)$(includedir)/ifolder/ifolder.h
 
 clean-local:
 	rm -f stdsoap2.* *.xml iFolder* env* soap*
