--- a/nautilus-ifolder/configure.in
+++ b/nautilus-ifolder/configure.in
@@ -105,12 +105,12 @@ AC_SUBST(GNOME_SHARP_LIBS)
 PKG_CHECK_MODULES(SIMIAS_CLIENT, simias-client >= $SIMIAS_CLIENT_MINIMUM_VERSION)
 AC_SUBST(SIMIAS_CLIENT_LIBS)
 
-PKG_CHECK_MODULES(SIMIAS_EVENT_CLIENT, simias-client-c >= $SIMIAS_CLIENT_MINIMUM_VERSION)
-AC_SUBST(SIMIAS_EVENT_CLIENT_CFLAGS)
-AC_SUBST(SIMIAS_EVENT_CLIENT_LIBS)
+PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= $SIMIAS_CLIENT_MINIMUM_VERSION)
+AC_SUBST(SIMIAS_CLIENT_C_CFLAGS)
+AC_SUBST(SIMIAS_CLIENT_C_LIBS)
 
-SIMIAS_EVENT_CLIENT_PREFIX=$(pkg-config --variable=prefix simias-client-c)
-AC_SUBST(SIMIAS_EVENT_CLIENT_PREFIX)
+SIMIAS_CLIENT_C_PREFIX=$(pkg-config --variable=prefix simias-client-c)
+AC_SUBST(SIMIAS_CLIENT_C_PREFIX)
 
 PKG_CHECK_MODULES(IFOLDER, ifolder3 >= $IFOLDER_MINIMUM_VERSION)
 AC_SUBST(IFOLDER_LIBS)
