Added simias.h to the SOURCES line.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3662 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/libsimias/Makefile.am
+++ b/simias/src/libsimias/Makefile.am
@@ -14,7 +14,7 @@ lib_LTLIBRARIES = libsimias.la
 override CFLAGS =
 
 libsimias_la_SOURCES = \
- 	envC.c simiasClientLib.c stdsoap2.c simias.c
+ 	envC.c simiasClientLib.c stdsoap2.c simias.c simias.h
  	
 libsimias_la_CFLAGS = \
 	-DWITH_NONAMESPACES
