Added ifolder.h to the SOURCES line.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3663 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/libifolder/Makefile.am
+++ b/ifolder/src/libifolder/Makefile.am
@@ -14,7 +14,7 @@ lib_LTLIBRARIES = libifolderclient.la
 override CFLAGS =
 
 libifolderclient_la_SOURCES = \
- 	envC.c iFolderClientLib.c stdsoap2.c ifolder.c
+ 	envC.c iFolderClientLib.c stdsoap2.c ifolder.c ifolder.h
 
 libifolderclient_la_CFLAGS = \
 	-DWITH_NONAMESPACES
