more changes for p2p
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3665 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/mDnsDomain/mDnsDomain.csproj
+++ b/simias/src/mDnsDomain/mDnsDomain.csproj
@@ -89,6 +89,11 @@
                     AssemblyName = "Simias"
                     HintPath = "..\Simias.dll\Simias.dll"
                 />
+                <Reference
+                    Name = "Novell.Security.ClientPasswordManager.NetCredential"
+                    AssemblyName = "Novell.Security.ClientPasswordManager.NetCredential"
+                    HintPath = "..\..\external\Novell.Security\net\bin\Novell.Security.ClientPasswordManager.NetCredential.dll"
+                />
             </References>
         </Build>
         <Files>
