included the Novell security directory
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3670 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/mDnsDomain/Makefile.am
+++ b/simias/src/mDnsDomain/Makefile.am
@@ -7,7 +7,7 @@ mDnsDomain_INCLUDES =
 mDnsDomain_RESOURCES =
 mDnsDomain_FLAGS = $(CSC_LIBFLAG)
 mDnsDomain_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Runtime.Remoting.dll System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll mDnsResponderApi.dll log4net.dll Novell.Security.ClientPasswordManager.NetCredential.dll
-mDnsDomain_LIBPATH = ../SimiasClient ../Simias.dll $(MDNSRESPONDER_DIR)
+mDnsDomain_LIBPATH = ../SimiasClient ../Simias.dll $(MDNSRESPONDER_DIR) $(NOVELL_SECURITY_DIR)
 
 EXTRA_DIST = $(mDnsDomain_CSFILES)
 
