--- a/simias/src/SimiasServer/simias.in
+++ b/simias/src/SimiasServer/simias.in
@@ -14,5 +14,6 @@ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@webbindir@
 export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@webbindir@
 cd @bindir@
 
+ulimit -n 1024
 mono @bindir@/SimiasServer.exe $@
 
