--- a/simias/other/SimpleServer/SimpleServer.csproj
+++ b/simias/other/SimpleServer/SimpleServer.csproj
@@ -85,14 +85,14 @@
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Web.Services.dll"
                 />
                 <Reference
-                    Name = "Simias"
-                    AssemblyName = "Simias"
-                    HintPath = "..\..\stage\web\bin\Simias.dll"
-                />
-                <Reference
                     Name = "Novell.AddressBook"
                     AssemblyName = "Novell.AddressBook"
                     HintPath = "..\..\src\AddressBook\Novell.AddressBook.dll"
+                />
+                <Reference
+                    Name = "Simias"
+                    AssemblyName = "Simias"
+                    HintPath = "..\..\..\..\final\web\bin\Simias.dll"
                 />
             </References>
         </Build>
@@ -112,6 +112,11 @@
                     RelPath = "DomainService.asmx.cs"
                     SubType = "Component"
                     BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "DomainService.asmx.resx"
+                    DependentUpon = "DomainService.asmx.cs"
+                    BuildAction = "EmbeddedResource"
                 />
                 <File
                     RelPath = "ProvisionInfo.cs"
