--- a/ifolder/configure.in
+++ b/ifolder/configure.in
@@ -442,6 +442,10 @@ AC_SUBST(SIMIAS_LIBS)
 PKG_CHECK_MODULES(SIMIAS_CLIENT, simias-client >= 1.0)
 AC_SUBST(SIMIAS_CLIENT_LIBS)
 
+PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= 1.0)
+AC_SUBST(SIMIAS_CLIENT_C_CFLAGS)
+AC_SUBST(SIMIAS_CLIENT_C_LIBS)
+
 # if using csc, convert /lib paths using cygpath
 case $CSC in
     csc)
