--- a/ifolder/ifolder3-c.pc.in
+++ b/ifolder/ifolder3-c.pc.in
@@ -2,12 +2,13 @@
 Name: iFolder-C
 Description: C Libraries for iFolder
 Version: @VERSION@
-Requires: @PKG_CONFIG_REQUIRES@
+Requires: simias-client-c
 Conflicts: @PKG_CONFIG_CONFLICTS@
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
+includedir=@prefix@/include/ifolder3
 
 Libs:-Wl,-rpath,${libdir} -L${libdir} -lifolderclient
 Cflags: -I${includedir}
