changes to remove Roster dependencies
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3688 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/mDnsDomain/mDnsDomain.csproj
+++ b/simias/src/mDnsDomain/mDnsDomain.csproj
@@ -85,14 +85,14 @@
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
-                    Name = "Simias"
-                    AssemblyName = "Simias"
-                    HintPath = "..\Simias.dll\Simias.dll"
-                />
-                <Reference
                     Name = "Novell.Security.ClientPasswordManager.NetCredential"
                     AssemblyName = "Novell.Security.ClientPasswordManager.NetCredential"
                     HintPath = "..\..\external\Novell.Security\net\bin\Novell.Security.ClientPasswordManager.NetCredential.dll"
+                />
+                <Reference
+                    Name = "Simias"
+                    AssemblyName = "Simias"
+                    HintPath = "..\..\stage\web\bin\Simias.dll"
                 />
             </References>
         </Build>
