1. Notify the shell when an iFolder delete event is processed. 2. Fixed bug that caused the OK button to not get enabled initially (bug 72687). 3. Display a prompt when reverting an iFolder from the shell (bug 72689).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3703 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/iFolderShell/iFolderShell.rc
+++ b/ifolder/src/iFolderShell/iFolderShell/iFolderShell.rc
@@ -75,6 +75,8 @@ BEGIN
     IDS_SHARE_DESC          "Share this iFolder with another user"
     IDS_PROPERTIES_DESC     "Display properties for this iFolder"
     IDS_HELP_DESC           "Access the iFolder help"
+    IDS_REVERT_TITLE        "Revert iFolder Confirmation"
+    IDS_REVERT_PROMPT       "This will revert this iFolder back to a normal folder and leave the files intact.  The iFolder will then be available from the server and will need to be setup in a different location in order to sync.\n\nAre you sure you want to revert this iFolder to a normal folder?"
 END
 
 #endif    // English (U.S.) resources
