--- a/nautilus-ifolder/configure.in
+++ b/nautilus-ifolder/configure.in
@@ -109,11 +109,12 @@ PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= $SIMIAS_CLIENT_MINIMUM_VER
 AC_SUBST(SIMIAS_CLIENT_C_CFLAGS)
 AC_SUBST(SIMIAS_CLIENT_C_LIBS)
 
-SIMIAS_CLIENT_C_PREFIX=$(pkg-config --variable=prefix simias-client-c)
-AC_SUBST(SIMIAS_CLIENT_C_PREFIX)
-
 PKG_CHECK_MODULES(IFOLDER, ifolder3 >= $IFOLDER_MINIMUM_VERSION)
 AC_SUBST(IFOLDER_LIBS)
+
+PKG_CHECK_MODULES(IFOLDER_C, ifolder3-c >= $IFOLDER_MINIMUM_VERSION)
+AC_SUBST(IFOLDER_C_CFLAGS)
+AC_SUBST(IFOLDER_C_LIBS)
 
 ifolder_prefix=$(pkg-config --variable=prefix ifolder3)
 AC_SUBST(ifolder_prefix)
