The plugin now sets and reads the buddy profile to determine whether a buddy has the plugin installed or not.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3728 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/gaim-ifolder/gifolder/Makefile.am
+++ b/gaim-ifolder/gifolder/Makefile.am
@@ -17,7 +17,8 @@ gifolder_la_SOURCES = \
 	simias-invitation-store.c \
 	simias-messages.c \
 	simias-prefs.c \
-	simias-util.c
+	simias-util.c \
+	buddy-profile.c
 
 endif
 
@@ -27,6 +28,7 @@ AM_CPPFLAGS = \
 	-DDATADIR=\"$(datadir)\" \
 	-DVERSION=\"$(VERSION)\" \
 	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/src/protocols/oscar \
 	$(SIMIAS_CLIENT_CFLAGS) \
 	$(DEBUG_CFLAGS) \
 	$(GTK_CFLAGS)
