made changes to support collapsing user information into the Member node since a real address book is not supporting we don't need to create multiple nodes just to support first and last name
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3755 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/other/SimpleServer/SimpleServer.csproj
+++ b/other/SimpleServer/SimpleServer.csproj
@@ -85,14 +85,9 @@
                     HintPath = "..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Web.Services.dll"
                 />
                 <Reference
-                    Name = "Novell.AddressBook"
-                    AssemblyName = "Novell.AddressBook"
-                    HintPath = "..\..\src\AddressBook\Novell.AddressBook.dll"
-                />
-                <Reference
                     Name = "Simias"
                     AssemblyName = "Simias"
-                    HintPath = "..\..\..\..\final\web\bin\Simias.dll"
+                    HintPath = "..\..\stage\web\bin\Simias.dll"
                 />
             </References>
         </Build>
