took out stdsoap.h from EXTRA_DIST
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3777 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/nautilus-ifolder/src/Makefile.am
+++ b/nautilus-ifolder/src/Makefile.am
@@ -16,7 +16,7 @@ INCLUDES =						\
 	$(IFOLDER_C_CFLAGS)	\
 	$(XML2_CFLAGS)
 
-EXTRA_DIST = nautilus-ifolder.h nautilus-ifolder.cs emblem-ifolder.png ifolder-folder.png stdsoap2.h
+EXTRA_DIST = nautilus-ifolder.h nautilus-ifolder.cs emblem-ifolder.png ifolder-folder.png
 
 # Make sure the following files are not included in the dist
 dist-hook:
