Removed use and references to Novell.AddressBook.dll
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3793 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/dependencies/Makefile
+++ b/dependencies/Makefile
@@ -134,7 +134,7 @@ SEP = /
 SET_MAKE = 
 SHELL = /bin/sh
 SIMIAS_CFLAGS =  
-SIMIAS_LIBS = /lib:/home/pthomas/wa/install-prefix/web/bin /r:Simias.dll /r:Novell.AddressBook.dll  
+SIMIAS_LIBS = /lib:/home/pthomas/wa/install-prefix/web/bin /r:Simias.dll  
 SPACE = $(EMPTY) $(EMPTY)
 SQLITELIB = libsqlite.so
 SQLITELIB_PATH = $(top_srcdir)/external/sqlite/linux
