--- a/simias/other/SimpleServer/Makefile.am
+++ b/simias/other/SimpleServer/Makefile.am
@@ -6,8 +6,8 @@ SimpleServer_CSFILES_CSC := $(subst /,$(SEP),$(SimpleServer_CSFILES))
 SimpleServer_INCLUDES =
 SimpleServer_RESOURCES =
 SimpleServer_FLAGS = $(CSC_LIBFLAG)
-SimpleServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll Novell.AddressBook.dll
-SimpleServer_LIBPATH = ../../src/Simias.dll ../../src/SimiasClient ../../src/AddressBook $(DESTDIR)$(webbindir)
+SimpleServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll Simias.dll SimiasClient.dll
+SimpleServer_LIBPATH = ../../src/Simias.dll ../../src/SimiasClient $(DESTDIR)$(webbindir)
 
 #EXTRA_DIST = $(SimpleServer_CSFILES)
 
