added back in a method for Mono to check if the user has rights.  This works now on Linux and Mac because I added the dylib path to the Posix helper dylib
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3798 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasServer/simias.in
+++ b/simias/src/SimiasServer/simias.in
@@ -11,7 +11,7 @@
 
 export MONO_PATH=@webbindir@
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@webbindir@
-export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@webbindir@
+export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@webbindir@:/Library/Frameworks/Mono.framework/Versions/Current/lib
 cd @bindir@
 
 ulimit -n 1024
