changed EXTRA_DIST to point to CSFILES1
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R1B2RC1_BR@3806 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/ClientUpgrade/Makefile.am
+++ b/ifolder/src/ClientUpgrade/Makefile.am
@@ -9,7 +9,7 @@ ClientUpgrade_FLAGS = $(CSC_LIBFLAG)
 ClientUpgrade_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll
 ClientUpgrade_LIBPATH =
 
-EXTRA_DIST = $(ClientUpgrade_CSFILES)
+EXTRA_DIST = $(ClientUpgrade_CSFILES1)
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
