Removed BUILD_GAIM_DOMAIN from configure.in so that theGaim Workgroup Domain code is built every time.  This willprevent issues where an interface is changed and breaks theGaim Domain code.  (Note: At runtime, the Gaim Domain is notcreated unless the user installs and enables the iFolder pluginin Gaim)
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3807 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Makefile.am
+++ b/simias/src/Makefile.am
@@ -1,21 +1,17 @@
 DIST_SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService WebService SyncService POBoxWS SimiasApp SimiasServer mDnsDomain libsimias GaimDomain
 
-if BUILD_GAIM_DOMAIN
-GAIM_DOMAIN_DIR = GaimDomain
-endif
-
 if DARWIN
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService WebService SyncService POBoxWS SimiasApp SimiasServer libsimias
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService WebService SyncService POBoxWS SimiasApp SimiasServer libsimias GaimDomain
 
 endif
 
 if LINUX
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService WebService SyncService POBoxWS SimiasApp SimiasServer libsimias $(GAIM_DOMAIN_DIR)
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService WebService SyncService POBoxWS SimiasApp SimiasServer libsimias GaimDomain
 
 endif
 
 if WINDOWS
-SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService WebService SyncService POBoxWS SimiasApp SimiasServer
+SUBDIRS = SimiasClient Simias.dll FlaimProvider mDnsService WebService SyncService POBoxWS SimiasApp SimiasServer GaimDomain
 
 endif
 
