Removed trailing separator characters before setting the new prefix (fix for bug 72660).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3808 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasClient/SimiasSetup.cs.in
+++ b/simias/src/SimiasClient/SimiasSetup.cs.in
@@ -99,6 +99,11 @@ namespace Simias.Client
 			
 			set
 			{
+				// On some Windows clients, the initial prefix path is C:\ which causes
+				// a malformed path to be returned by Replace ... removing the trailing separator
+				// will fix this.
+				_prefix = _prefix.Trim(Path.DirectorySeparatorChar);
+				
 				// replace the old prefix
 				_bindir = Path.GetFullPath(_bindir.Replace(_prefix, value));
 				_datadir = Path.GetFullPath(_datadir.Replace(_prefix, value));
