Fixed the makefile.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3810 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/GaimDomain/Makefile.am
+++ b/simias/src/GaimDomain/Makefile.am
@@ -24,7 +24,7 @@ Simias.Gaim.dll: $(GaimDomain_CSFILES) $(GaimDomain_RESOURCES)
 	
 if DEBUG
 if WINDOWS
-DEBUG_CHECK_FILES = Simias.GaimDomain.pdb
+DEBUG_CHECK_FILES = Simias.Gaim.pdb
 endif
 endif
 
