1. Changed the toolbar button style to Flat. 2. Add an ACE to allow the Users group read, write and execute rights to the temporary web directory (fix for bug 72940).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3814 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
@@ -223,6 +223,11 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "Security.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "ServerDetails.cs"
                     SubType = "Form"
                     BuildAction = "Compile"
